前の分に追加

--- a/test.ipynb
+++ b/test.ipynb
@@ -129,62 +129,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting bs4\n",
-      "  Downloading bs4-0.0.2-py2.py3-none-any.whl.metadata (411 bytes)\n",
-      "Collecting beautifulsoup4 (from bs4)\n",
-      "  Downloading beautifulsoup4-4.12.3-py3-none-any.whl.metadata (3.8 kB)\n",
-      "Collecting soupsieve>1.2 (from beautifulsoup4->bs4)\n",
-      "  Downloading soupsieve-2.5-py3-none-any.whl.metadata (4.7 kB)\n",
-      "Downloading bs4-0.0.2-py2.py3-none-any.whl (1.2 kB)\n",
-      "Downloading beautifulsoup4-4.12.3-py3-none-any.whl (147 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m147.9/147.9 kB\u001b[0m \u001b[31m4.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hDownloading soupsieve-2.5-py3-none-any.whl (36 kB)\n",
-      "Installing collected packages: soupsieve, beautifulsoup4, bs4\n",
-      "Successfully installed beautifulsoup4-4.12.3 bs4-0.0.2 soupsieve-2.5\n"
+      "dfmievqxs22taz1pstsqyoia\n"
      ]
-    }
-   ],
-   "source": [
-    "!pip install bs4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "session.cookies.clear()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'gs2o3b55mhkujgj5g3mlifzj'"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "url_signin = \"https://www.task-asp.net/cu/ykd402303/Top\"\n",
     "test_res = session.get(url_signin)\n",
-    "session.cookies.get_dict().get('taskasp_cu_ykd_sessionid')\n",
-    "\n"
+    "cookie = session.cookies.get_dict().get('taskasp_cu_ykd_sessionid')\n",
+    "print(cookie)\n",
+    "session.cookies.clear()\n"
    ]
   },
   {
@@ -205,87 +166,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<!DOCTYPE html PUBLIC \"-//W3C//DTD XHTML 1.0 Strict//EN\" \"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd\">\n",
-      "<html xmlns=\"http://www.w3.org/1999/xhtml\">\n",
-      "<head>\n",
-      "<meta http-equiv=\"Content-Type\" content=\"text/html; charset=shift_jis\"/>\n",
-      "<title>404 - t@CÜ½ÍfBNgª©Â©èÜ¹ñB</title>\n",
-      "<style type=\"text/css\">\n",
-      "<!--\n",
-      "body{margin:0;font-size:.7em;font-family:Verdana, Arial, Helvetica, sans-serif;background:#EEEEEE;}\n",
-      "fieldset{padding:0 15px 10px 15px;} \n",
-      "h1{font-size:2.4em;margin:0;color:#FFF;}\n",
-      "h2{font-size:1.7em;margin:0;color:#CC0000;} \n",
-      "h3{font-size:1.2em;margin:10px 0 0 0;color:#000000;} \n",
-      "#header{width:96%;margin:0 0 0 0;padding:6px 2% 6px 2%;font-family:\"trebuchet MS\", Verdana, sans-serif;color:#FFF;\n",
-      "background-color:#555555;}\n",
-      "#content{margin:0 0 0 2%;position:relative;}\n",
-      ".content-container{background:#FFF;width:96%;margin-top:8px;padding:10px;position:relative;}\n",
-      "-->\n",
-      "</style>\n",
-      "</head>\n",
-      "<body>\n",
-      "<div id=\"header\"><h1>T[o[ G[</h1></div>\n",
-      "<div id=\"content\">\n",
-      " <div class=\"content-container\"><fieldset>\n",
-      "  <h2>404 - t@CÜ½ÍfBNgª©Â©èÜ¹ñB</h2>\n",
-      "  <h3>õÌ\\[XÍí³ê½Â\\«ª èÜ·BÜ½ÍA¼OªÏX³ê½©AêIÉgpsÂ\\ÉÈÁÄ¢Ü·B</h3>\n",
-      " </fieldset></div>\n",
-      "</div>\n",
-      "</body>\n",
-      "</html>\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "res = session.get(url_signin)\n",
-    "soup = BeautifulSoup(res.text, 'html.parser')\n",
-    "# viewstate_generator = soup.find('input', {'id': '__VIEWSTATEGENERATOR'})['value']\n",
-    "# viewstate = soup.find('input', {'id': '__VIEWSTATE'})['value']\n",
-    "# print(viewstate)\n",
-    "\n",
-    "print(res.text)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "以下の手法で，GETが完了すれば，VIEWSTATEは取得できそう（202の場合）\n",
-    "ただcookieをどこで取得するかを検討する必要あり"
+    "* ただcookieをどこで取得するかを検討する必要あり\n",
+    "* しかし現状昔の？cookieを使い回しできている謎状況\n",
+    "* VIEWSTATEを取得できていそうだが，本物よりもかなり短い"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "200 {'Cache-Control': 'private', 'Content-Type': 'text/html; charset=utf-8', 'Content-Encoding': 'gzip', 'Vary': 'Accept-Encoding', 'Server': 'Microsoft-IIS/10.0', 'Date': 'Thu, 18 Jul 2024 20:12:47 GMT', 'Content-Length': '1666'} \n",
+      "200 {'Cache-Control': 'private', 'Content-Type': 'text/html; charset=utf-8', 'Content-Encoding': 'gzip', 'Vary': 'Accept-Encoding', 'Server': 'Microsoft-IIS/10.0', 'Date': 'Thu, 18 Jul 2024 20:21:16 GMT', 'Content-Length': '1666'} \n",
       "\n",
       "<!DOCTYPE html>\n",
       "<html lang=\"ja\">\n",
@@ -360,7 +259,8 @@
     "  \"Accept-Language\": \"ja;q=0.7\",\n",
     "  \"Cache-Control\": \"max-age=0\",\n",
     "  \"Connection\": \"keep-alive\",\n",
-    "  \"Cookie\": \"taskasp_cu_ykd_starturl=%2fcu%2feg%2fykd402303.task; taskasp_cu_ykd_sppage=1; taskasp_cu_ykd_sessionid=qdn335ec5lrsdevtdphaie5w; taskasp_cu_ykr_sessionid=gmtlwzd4jtmssnqjxfi1e3bf\",\n",
+    "  # \"Cookie\": \"taskasp_cu_ykd_starturl=%2fcu%2feg%2fykd402303.task; taskasp_cu_ykd_sppage=1; taskasp_cu_ykd_sessionid=qdn335ec5lrsdevtdphaie5w; taskasp_cu_ykr_sessionid=gmtlwzd4jtmssnqjxfi1e3bf\",\n",
+    "  \"Cookie\": \"taskasp_cu_ykd_starturl=%2fcu%2feg%2fykd402303.task; taskasp_cu_ykd_sppage=1; taskasp_cu_ykd_sessionid=qdn335ec5lrsdevtdphaie5w; taskasp_cu_ykr_sessionid=\"+str(cookie),\n",
     "  \"Host\": \"www.task-asp.net\",\n",
     "  \"Referer\": \"https://www.task-asp.net/cu/ykd402303/Top\",\n",
     "  \"Sec-Ch-Ua\": \"\\\"Not/A)Brand\\\";v=\\\"8\\\", \\\"Chromium\\\";v=\\\"126\\\", \\\"Brave\\\";v=\\\"126\\\"\",\n",
