--- a/test.ipynb
+++ b/test.ipynb
@@ -385,30 +385,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NoSuchElementException",
-     "evalue": "Message: no such element: Unable to locate element: {\"method\":\"css selector\",\"selector\":\"[id=\"UserLoginLinkButton\"]\"}\n  (Session info: chrome=128.0.6613.121); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception\nStacktrace:\n0   chromedriver                        0x000000010076d208 cxxbridge1$str$ptr + 1927396\n1   chromedriver                        0x000000010076566c cxxbridge1$str$ptr + 1895752\n2   chromedriver                        0x0000000100360808 cxxbridge1$string$len + 89564\n3   chromedriver                        0x00000001003a4bcc cxxbridge1$string$len + 369056\n4   chromedriver                        0x00000001003de228 cxxbridge1$string$len + 604156\n5   chromedriver                        0x0000000100399698 cxxbridge1$string$len + 322668\n6   chromedriver                        0x000000010039a310 cxxbridge1$string$len + 325860\n7   chromedriver                        0x0000000100733e78 cxxbridge1$str$ptr + 1693012\n8   chromedriver                        0x000000010073877c cxxbridge1$str$ptr + 1711704\n9   chromedriver                        0x00000001007193ec cxxbridge1$str$ptr + 1583816\n10  chromedriver                        0x000000010073904c cxxbridge1$str$ptr + 1713960\n11  chromedriver                        0x0000000100709fc8 cxxbridge1$str$ptr + 1521316\n12  chromedriver                        0x0000000100756b68 cxxbridge1$str$ptr + 1835588\n13  chromedriver                        0x0000000100756ce4 cxxbridge1$str$ptr + 1835968\n14  chromedriver                        0x0000000100765308 cxxbridge1$str$ptr + 1894884\n15  libsystem_pthread.dylib             0x000000018c501f94 _pthread_start + 136\n16  libsystem_pthread.dylib             0x000000018c4fcd34 thread_start + 8\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNoSuchElementException\u001b[0m                    Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[11], line 24\u001b[0m\n\u001b[1;32m     21\u001b[0m     PW_area\u001b[38;5;241m.\u001b[39msend_keys(os\u001b[38;5;241m.\u001b[39mgetenv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPASSWORD\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[1;32m     23\u001b[0m getSignInUrl()\n\u001b[0;32m---> 24\u001b[0m \u001b[43mexecuteLogIn\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[11], line 14\u001b[0m, in \u001b[0;36mexecuteLogIn\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mexecuteLogIn\u001b[39m():\n\u001b[0;32m---> 14\u001b[0m     logInButton \u001b[38;5;241m=\u001b[39m \u001b[43mdriver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfind_element\u001b[49m\u001b[43m(\u001b[49m\u001b[43mBy\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mID\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mUserLoginLinkButton\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     15\u001b[0m     logInButton\u001b[38;5;241m.\u001b[39mclick()\n\u001b[1;32m     16\u001b[0m     sleep(\u001b[38;5;241m0.2\u001b[39m)\n",
-      "File \u001b[0;32m~/Programs/johnmade/Python/itoshima_rsv/venv/lib/python3.10/site-packages/selenium/webdriver/remote/webdriver.py:748\u001b[0m, in \u001b[0;36mWebDriver.find_element\u001b[0;34m(self, by, value)\u001b[0m\n\u001b[1;32m    745\u001b[0m     by \u001b[38;5;241m=\u001b[39m By\u001b[38;5;241m.\u001b[39mCSS_SELECTOR\n\u001b[1;32m    746\u001b[0m     value \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m[name=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalue\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m--> 748\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCommand\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFIND_ELEMENT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43musing\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mby\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mvalue\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "File \u001b[0;32m~/Programs/johnmade/Python/itoshima_rsv/venv/lib/python3.10/site-packages/selenium/webdriver/remote/webdriver.py:354\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[0;34m(self, driver_command, params)\u001b[0m\n\u001b[1;32m    352\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_executor\u001b[38;5;241m.\u001b[39mexecute(driver_command, params)\n\u001b[1;32m    353\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response:\n\u001b[0;32m--> 354\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merror_handler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    355\u001b[0m     response[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_unwrap_value(response\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[1;32m    356\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
-      "File \u001b[0;32m~/Programs/johnmade/Python/itoshima_rsv/venv/lib/python3.10/site-packages/selenium/webdriver/remote/errorhandler.py:229\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[0;34m(self, response)\u001b[0m\n\u001b[1;32m    227\u001b[0m         alert_text \u001b[38;5;241m=\u001b[39m value[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124malert\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    228\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[38;5;66;03m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[0;32m--> 229\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
-      "\u001b[0;31mNoSuchElementException\u001b[0m: Message: no such element: Unable to locate element: {\"method\":\"css selector\",\"selector\":\"[id=\"UserLoginLinkButton\"]\"}\n  (Session info: chrome=128.0.6613.121); For documentation on this error, please visit: https://www.selenium.dev/documentation/webdriver/troubleshooting/errors#no-such-element-exception\nStacktrace:\n0   chromedriver                        0x000000010076d208 cxxbridge1$str$ptr + 1927396\n1   chromedriver                        0x000000010076566c cxxbridge1$str$ptr + 1895752\n2   chromedriver                        0x0000000100360808 cxxbridge1$string$len + 89564\n3   chromedriver                        0x00000001003a4bcc cxxbridge1$string$len + 369056\n4   chromedriver                        0x00000001003de228 cxxbridge1$string$len + 604156\n5   chromedriver                        0x0000000100399698 cxxbridge1$string$len + 322668\n6   chromedriver                        0x000000010039a310 cxxbridge1$string$len + 325860\n7   chromedriver                        0x0000000100733e78 cxxbridge1$str$ptr + 1693012\n8   chromedriver                        0x000000010073877c cxxbridge1$str$ptr + 1711704\n9   chromedriver                        0x00000001007193ec cxxbridge1$str$ptr + 1583816\n10  chromedriver                        0x000000010073904c cxxbridge1$str$ptr + 1713960\n11  chromedriver                        0x0000000100709fc8 cxxbridge1$str$ptr + 1521316\n12  chromedriver                        0x0000000100756b68 cxxbridge1$str$ptr + 1835588\n13  chromedriver                        0x0000000100756ce4 cxxbridge1$str$ptr + 1835968\n14  chromedriver                        0x0000000100765308 cxxbridge1$str$ptr + 1894884\n15  libsystem_pthread.dylib             0x000000018c501f94 _pthread_start + 136\n16  libsystem_pthread.dylib             0x000000018c4fcd34 thread_start + 8\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "from selenium import webdriver\n",
     "from time import sleep\n",
+    "from datetime import datetime\n",
+    "from dateutil.relativedelta import relativedelta\n",
     "from selenium.webdriver.chrome.options import Options\n",
     "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "from selenium.webdriver.support.ui import Select\n",
+    "from dotenv import load_dotenv\n",
     "\n",
     "driver = webdriver.Chrome()\n",
     "\n",
@@ -424,11 +416,107 @@
     "    \n",
     "    ID_area = driver.find_element(By.ID, \"UserNoTextBox\")\n",
     "    PW_area = driver.find_element(By.ID, \"PasswordTextBox\")\n",
+    "    signIn_button = driver.find_element(By.ID, \"LoginButton\")\n",
     "    ID_area.send_keys(os.getenv('USERNAME'))\n",
     "    PW_area.send_keys(os.getenv('PASSWORD'))\n",
+    "    signIn_button.click()\n",
+    "    sleep(0.2)\n",
+    "    topPage_button = driver.find_element(By.ID, \"TopLinkButton\")\n",
+    "    topPage_button.click()\n",
+    "\n",
+    "def submitDetails():\n",
+    "    ########## 日程の予約 ##########\n",
+    "    ####  事前準備  ####\n",
+    "    # ターゲットになる予約日程を取得する\n",
+    "    today = datetime.today()\n",
+    "    three_month_later = today + relativedelta(months=2)\n",
+    "    formatted_date = three_month_later.strftime('%Y%m%d')# YYYYMMDDに変換\n",
+    "    #### 事前準備 ####\n",
+    "    wait = WebDriverWait(driver, 10)\n",
+    "    open_schedule = wait.until(EC.element_to_be_clickable((By.CSS_SELECTOR, \"a.ui-collapsible-heading-toggle.ui-btn.ui-btn-icon-left.ui-btn-inherit.ui-icon-calendar\")))\n",
+    "    open_schedule.click()\n",
+    "    sleep(0.2)\n",
+    "    for _ in range(2):\n",
+    "        next_month_button = wait.until(EC.element_to_be_clickable((By.XPATH, '//*[@id=\"MainContentPlaceHolder_SearchItemInput_UseDateCalendarPicker_UseDateCalendarPicker\"]/table/tbody/tr[1]/td/table/tbody/tr/td[3]')))\n",
+    "        next_month_button.click()\n",
+    "        sleep(0.2)\n",
+    "    date_element = wait.until(EC.element_to_be_clickable((By.XPATH, f'//a[@class=\"lg-cal-date\" and @data-lg-date=\"{formatted_date}\"]')))\n",
+    "    date_element.click()\n",
+    "    ########## 日程の予約 ##########\n",
+    "    \n",
+    "    ########## 予約内容の入力 ##########\n",
+    "    #### 施設の選択 ####\n",
+    "    facility_select = wait.until(EC.presence_of_element_located((By.ID, \"MainContentPlaceHolder_SearchItemInput_SisetuNameDropDownList\")))\n",
+    "    select = Select(facility_select)\n",
+    "    select.select_by_value(\"0002\")\n",
+    "    #### 施設の選択 ####\n",
+    "    \n",
+    "    #### 利用目的 ####\n",
+    "    change_to_purpose_select = wait.until(EC.element_to_be_clickable((By.XPATH, '//*[@id=\"MainContentPlaceHolder_SearchItemInput_SearchTypeRadioButtonList\"]/div[2]/label')))\n",
+    "    change_to_purpose_select.click()\n",
+    "    purpose_wrapper = wait.until(EC.element_to_be_clickable((By.ID, \"select-10-button\")))\n",
+    "    purpose_wrapper.click()\n",
+    "    purpose_option_select = wait.until(EC.element_to_be_clickable((By.XPATH, '//select/option[@value=\"216\"]')))\n",
+    "    purpose_option_select.click()\n",
+    "    #### 利用目的 ####\n",
+    "    \n",
+    "    search_button = wait.until(EC.element_to_be_clickable((By.ID, \"LinkButtonSearch\")))\n",
+    "    search_button.click()\n",
+    "    sleep(0.5)\n",
+    "\n",
+    "def reservation():\n",
+    "    wait = WebDriverWait(driver, 10)\n",
+    "    \n",
+    "    full_area_button = wait.until(EC.element_to_be_clickable((By.XPATH, \"//a[contains(@href, 'ctl00$MainContentPlaceHolder$AkiListView$ctrl2$AddYoyakuKagoButton')]\")))\n",
+    "    full_area_button.click()\n",
+    "    sleep(0.5)\n",
+    "    \n",
+    "    # time_slot_1700to1730 = wait.until(EC.element_to_be_clickable((By.XPATH, '//label[@for=\"UseTimeCheckBoxList_16\"]')))\n",
+    "    # time_slot_1700to1730.click()\n",
+    "    # time_slot_1730to1800 = wait.until(EC.element_to_be_clickable((By.XPATH, '//label[@for=\"UseTimeCheckBoxList_17\"]')))\n",
+    "    # time_slot_1730to1800.click()\n",
+    "    # time_slot_1800to1830 = wait.until(EC.element_to_be_clickable((By.XPATH, '//label[@for=\"UseTimeCheckBoxList_18\"]')))\n",
+    "    # time_slot_1800to1830.click()\n",
+    "    # time_slot_1830to1900 = wait.until(EC.element_to_be_clickable((By.XPATH, '//label[@for=\"UseTimeCheckBoxList_19\"]')))\n",
+    "    # time_slot_1830to1900.click()\n",
+    "    # time_slot_1900to1930 = wait.until(EC.element_to_be_clickable((By.XPATH, '//label[@for=\"UseTimeCheckBoxList_20\"]')))\n",
+    "    # time_slot_1900to1930.click()\n",
+    "    # time_slot_1930to2000 = wait.until(EC.element_to_be_clickable((By.XPATH, '//label[@for=\"UseTimeCheckBoxList_21\"]')))\n",
+    "    # time_slot_1930to2000.click()\n",
+    "    time_slot_2000to2030 = wait.until(EC.element_to_be_clickable((By.XPATH, '//label[@for=\"UseTimeCheckBoxList_22\"]')))\n",
+    "    time_slot_2000to2030.click()\n",
+    "    time_slot_2030to2100 = wait.until(EC.element_to_be_clickable((By.XPATH, '//label[@for=\"UseTimeCheckBoxList_23\"]')))\n",
+    "    time_slot_2030to2100.click()\n",
+    "    time_slot_2100to2130 = wait.until(EC.element_to_be_clickable((By.XPATH, '//label[@for=\"UseTimeCheckBoxList_24\"]')))\n",
+    "    time_slot_2100to2130.click()\n",
+    "    time_slot_2130to2200 = wait.until(EC.element_to_be_clickable((By.XPATH, '//label[@for=\"UseTimeCheckBoxList_25\"]')))\n",
+    "    time_slot_2130to2200.click()\n",
+    "    \n",
+    "    event_name_input = wait.until(EC.presence_of_element_located((By.ID, \"GyouziNameTextBox\")))\n",
+    "    event_name_input.clear()  # 既存のテキストがある場合はクリア\n",
+    "    event_name_input.send_keys(\"サークル活動\")\n",
+    "    \n",
+    "    total_people_input = wait.until(EC.presence_of_element_located((By.ID, \"NinzuuTotalTextBox\")))\n",
+    "    total_people_input.clear()  # 既存のテキストがある場合はクリア\n",
+    "    driver.execute_script(\"arguments[0].value='14';\", total_people_input)\n",
+    "    \n",
+    "    complete_button = wait.until(EC.element_to_be_clickable((By.ID, \"RegistForYoyakuKagoButton\")))\n",
+    "    complete_button.click()\n",
+    "\n",
+    "def registration():\n",
+    "    wait = WebDriverWait(driver, 10)\n",
+    "    confirm_button = wait.until(EC.element_to_be_clickable((By.ID, \"YoyakuConfirmButton\")))\n",
+    "    confirm_button.click()\n",
+    "    \n",
+    "    finalConfirm_button = wait.until(EC.element_to_be_clickable((By.ID, \"YoyakuButton\")))\n",
+    "    finalConfirm_button.click()\n",
+    "\n",
     "\n",
     "getSignInUrl()\n",
-    "executeLogIn()\n"
+    "executeLogIn()\n",
+    "submitDetails()\n",
+    "reservation()\n",
+    "registration()"
    ]
   },
   {
